Fixes input alignment on the beta form

--- a/assets/styles/components/beta-signup-form.less
+++ b/assets/styles/components/beta-signup-form.less
@@ -42,12 +42,12 @@
     }
   }
 
-  .Form-field:first-child {
+  .FormField:first-child .form-field {
     margin-left: 0;
     margin-right: 10px;
   }
 
-  .Form-field:last-child {
+  .FormField:last-child .form-field {
     margin-left: 10px;
     margin-right: 0;
   }
